CWS-TOOLING: integrate CWS dba32b 2009-06-03 14:58:08 +0200 fs  r272581 : #i102439# 2009-05-29 13:56:18 +0200 fs  r272456 : remove the sub form when the 'add subform' setting changes from <true/> to <false/>, not only its controls 2009-05-29 13:19:27 +0200 fs  r272454 : display '(Default)' instead of an empty string when a control has the default font 2009-05-28 20:49:18 +0200 fs  r272428 : #i98162# getFirstSelectedValue: do not return reference to a temporary 2009-05-27 15:30:22 +0200 msc  r272353 : #102303# 2009-05-26 13:03:06 +0200 fs  r272295 : spelling 2009-05-26 12:59:54 +0200 fs  r272294 : merge m48 version to get latest cygwin related fixes 2009-05-25 14:02:06 +0200 fs  r272239 : remove references to local files, needed for debugging sessions only 2009-05-25 14:01:16 +0200 fs  r272238 : #i102021# ensure members such as bNumberFormat are initialized before actually returning them 2009-05-25 13:10:20 +0200 fs  r272236 : #i10000# reset ENABLE_EVOAB2 2009-05-22 06:44:45 +0200 oj  r272167 : #i99104# add import handler for calc-sett 2009-05-22 06:42:27 +0200 oj  r272166 : #i99104# impl NullDate as member 2009-05-22 06:36:22 +0200 oj  r272165 : #i99104# handle nulldate from parent model 2009-05-22 06:33:13 +0200 oj  r272164 : #i99104# export and import calculation-settings and nulldate 2009-05-22 06:27:50 +0200 oj  r272163 : #i99104# export and import calculation-settings and nulldate 2009-05-20 13:29:58 +0200 oj  r272118 : #i99911# handle invalid name 2009-05-20 13:28:49 +0200 oj  r272117 : #i101261# handle different rowsets 2009-05-20 11:29:55 +0200 msc  r272111 : #i100000# 2009-05-20 11:28:27 +0200 msc  r272110 : merge in change from dba32a 2009-05-20 11:27:38 +0200 msc  r272109 : #102082# CTRL + C does not work 2009-05-20 09:43:36 +0200 oj  r272106 : clean up includes 2009-05-20 09:32:15 +0200 oj  r272105 : #i99060# merge error resovled now VERTICAL_ALIGN is in both stmt 2009-05-20 08:37:21 +0200 msc  r272104 : add workaround for issue #102010# 2009-05-20 08:10